--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.0.6",
     "react-player": "^2.9.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
